--- a/components/embla.module.sass
+++ b/components/embla.module.sass
@@ -1,32 +1,23 @@
+
 .embla
   max-width: 100vw
-  margin: auto
-  --slide-height: 19rem
-  --slide-spacing: 0rem
-  --slide-size: 30%
+  // margin: auto
+  $slide-spacing: 2rem
+  $slide-size: min(30%, 300px)
 
   &__viewport
     overflow: hidden
+    margin-left: 1.5rem // Shift the entire carousel to match the heading
 
   &__container
     display: flex
+    margin-inline: 0
     touch-action: pan-y pinch-zoom
-    margin-left: calc(var(--slide-spacing) * -1)
 
   &__slide
-    transform: translate3d(0, 0, 0)
-    flex: 0 0 var(--slide-size)
-    width: 300px
+    margin-right: $slide-spacing
+    min-height: 300px
+    flex: 0 0 $slide-size
+    width: 100%
     border: 1px solid white
-    padding-left: var(--slide-spacing)
-
-  &__slide__number
-    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast)
-    border-radius: 1.8rem
-    font-size: 4rem
-    font-weight: 600
-    display: flex
-    align-items: center
-    justify-content: center
-    height: var(--slide-height)
-    user-select: none
+    transition: transform 0.3s ease-out
