--- a/components/embla.module.sass
+++ b/components/embla.module.sass
@@ -7,11 +7,11 @@
 
   &__viewport
     overflow: hidden
-    margin-left: 1.5rem // Shift the entire carousel to match the heading
+    // margin-left: 1.5rem
 
   &__container
     display: flex
-    margin-inline: 0
+    margin-inline: $slide-spacing
     touch-action: pan-y pinch-zoom
 
   &__slide
