--- a/components/embla.module.sass
+++ b/components/embla.module.sass
@@ -3,7 +3,7 @@
   max-width: 100vw
   // margin: auto
   $slide-spacing: 2rem
-  $slide-size: min(30%, 300px)
+  $slide-size: min(40%, 300px)
 
   &__viewport
     overflow: hidden
@@ -16,7 +16,7 @@
 
   &__slide
     margin-right: $slide-spacing
-    min-height: 300px
+    height: 400px
     flex: 0 0 $slide-size
     width: 100%
     border: 1px solid white
